tests/rt/neg/ifc/lclear-indirect-high-raise.trp
(* negative ; receiving below the level of the pc at the raise time *)
let val _ = _setProcessDebuggingName ("main") 
    val _ = send (self (), 1)
in 
if true raisedTo `{secret}` then 
  let val c = raisembox (`{secret}`)
   in rcv (`{}`, `{secret}`, [hn x => x])
  end 
else 
  ()
end    